# tiet-uta027.github.io

./: .gitignore  404.html  LICENSE  Makefile  README.md  academic-calendar  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: mkdocs.yml
a04/: index.html  index.org
a05/: index.html  index.org
a06/: index.html  index.org
a07/: index.html  index.org  index.tex
assets/stylesheets/: extra.css
assets/theme-overrides/: main.html
docs/a04/: index.md  index.org  index.tex
docs/a05/: index.md  index.org  index.tex
docs/a06/: index.md  index.org  index.tex
docs/a07/: index.md  index.org  index.tex
docs/graph-theory/: index.md  index.org  index.tex
docs/ml-notes/: index.md  index.org  index.tex
docs/predicates/: index.md  index.org  index.tex  paste-wfe.el
graph-theory/: index.html  index.org  index.tex
javascript/: arithmatex.js
ml-notes/: index.html  index.org  index.tex  svm.pdf_tex
predicates/: index.html  index.org  index.tex  samples.tsv
search/: search_index.json
