
[build-system]
requires = ["hatchling","hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "tiet-uta027.github.io"
version = "0.0.23"
authors = [
  { name="Raghav B. Venkataramaiyer", email="bv.raghav@thapar.edu" },
]
# maintainers = [
#   { name="Raghav B. Venkataramaiyer",
#     email="bvraghav@gmail.com" },
# ]
description = "UTA027 Course Website"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    # See: https://pypi.org/classifiers/
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: POSIX",
    "Programming Language :: Unix Shell",
]
dependencies = ["click"]

[project.urls]
Homepage = "https://tiet-uta027.github.io/"
Issues = "https://github.com/tiet-uta027/tiet-uta027.github.io/issues"

# Adapted from https://stackoverflow.com/a/50156706
[tool.pytest.ini_options]
pythonpath = [
  "src"
]
# THE END -------------------------------------------
